# DAVE

./: .gitignore  DAVE_v2.py  analog_discovery_test.py  data_visualize_DAVE_V1.6.py  launch_scripts.sh  requirements.txt
DAVE_V1/: DAVE.py  calibration_2025-01-31 15h42m16s.txt  test-ds1054z_channel2.py
dave_cloud_main/: cloud.py  dataframe_export.csv  fichier_demo.xlsx  requirements.txt
dave_cloud_main/utils/: credentials.json
dave_stat_main/: main.py  requirements.txt  run_venv.sh  utils.py
dave_visualisation/: IG V2.7.2.py  README.md  README_dave_ig.md  pyproject.toml
dave_visualisation/dave_ig/: __init__.py  app.py  config.py  dialog.py  gui.py  io_tools.py  mpl_tools.py  overlay.py  plot_sensor.py  plot_voltage.py  signal_tools.py
utils/: calibrators.py  capture.py  capture_v2.py  grovepitest.py
